commit for role wise list and new requirement changes